--- a/brand/templates/brand/influencers.html
+++ b/brand/templates/brand/influencers.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <script>
-    $('#influencers-top-nav-id').addClass('is-active');
+    $('.influencers-top-nav').addClass('is-active');
     $('.mdl-tabs__panel hr:last-child').remove();
     var add_influencer_data = () => {
             $('#all-influencers-panel .mdl-spinner').addClass(`is-active`);
