--- a/accounts/templates/accounts/complete_registration/base.html
+++ b/accounts/templates/accounts/complete_registration/base.html
@@ -87,28 +87,34 @@
                     <div class="logo-text">ENDORSITY</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
-                <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
+                <a href="{% url 'accounts:landing' %}?view=how-it-works" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">engineering</i>
-                        &nbsp;&nbsp;How It Works
+                        &nbsp;How It Works
                     </button>
                 </a>
-                <a href="#" class="mdl-navigation__link">
+                <a href="{% url 'accounts:landing' %}?view=how-are-we-different" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">wb_incandescent</i>
+                        &nbsp;How Are We Different
+                    </button>
+                </a>
+                <a href="{% url 'accounts:landing' %}?view=pricing" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">monetization_on</i>
-                        &nbsp;&nbsp;Pricing
+                        &nbsp;Pricing
                     </button>
                 </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
-                    <button class="mdl-button mdl-js-button">
-                        <i class="material-icons">question_answer</i>
-                        &nbsp;&nbsp;Contact Us
-                    </button>
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
+                <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">help</i>
-                        &nbsp;&nbsp;FAQ
+                        &nbsp;FAQ
+                    </button>
+                </a>
+                <a href="{% url 'accounts:landing' %}?view=contact" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">question_answer</i>
+                        &nbsp;Contact Us
                     </button>
                 </a>
                 <button id="settings-menu" class="mdl-button mdl-js-button mdl-button--icon">
