--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -89,37 +89,37 @@
                     <!-- <span class="mdl-layout-title">Endorsity</span> -->
                 </a>
                 <div class="mdl-layout-spacer"></div>
-                <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
+                <a href="{% url 'accounts:landing' %}?view=how-it-works" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">engineering</i>
                         &nbsp;How It Works
                     </button>
                 </a>
-                <a href="#" class="mdl-navigation__link">
+                <a href="{% url 'accounts:landing' %}?view=how-are-we-different" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">wb_incandescent</i>
                         &nbsp;How Are We Different
                     </button>
                 </a>
-                <a href="#" class="mdl-navigation__link">
+                <a href="{% url 'accounts:landing' %}?view=pricing" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">monetization_on</i>
                         &nbsp;Pricing
                     </button>
                 </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
+                <a href="{% url 'accounts:landing' %}?view=faq" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">help</i>
                         &nbsp;FAQ
                     </button>
                 </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
+                <a href="{% url 'accounts:landing' %}?view=contact" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
                         <i class="material-icons">question_answer</i>
                         &nbsp;Contact Us
                     </button>
                 </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:login' %}">
+                <a href="{% url 'accounts:login' %}" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                         <i class="material-icons">login</i>
                         &nbsp;&nbsp;Login or Sign Up
@@ -133,6 +133,29 @@
             </div>
         </main>
     </div>
+    <script>
+        var getUrlParameter = function getUrlParameter(sParam) {
+            var sPageURL = window.location.search.substring(1),
+                sURLVariables = sPageURL.split('&'),
+                sParameterName,
+                i;
+
+            for (i = 0; i < sURLVariables.length; i++) {
+                sParameterName = sURLVariables[i].split('=');
+
+                if (sParameterName[0] === sParam) {
+                    return sParameterName[1] === undefined ? true : decodeURIComponent(sParameterName[1]);
+                }
+            }
+        };
+        window.onload = function () {
+            setTimeout(function () {
+                if (getUrlParameter('view')) {
+                    document.querySelector(`.${getUrlParameter('view')}-section`).scrollIntoView({ behavior: "smooth" });
+                }
+            }, 0);
+        };
+    </script>
 </body>
 
 </html>
