--- a/brand/templates/brand/base.html
+++ b/brand/templates/brand/base.html
@@ -90,13 +90,13 @@
         }
 
         .mdl-layout__drawer-button {
-            margin-top: 32px;
+            margin-top: 38px;
             height: 7vh;
             width: 7vh;
         }
 
         .mdl-layout__drawer-button>i {
-            font-size: 7vh;
+            font-size: 6vh;
             color: #EEEEEE;
         }
 
@@ -153,7 +153,8 @@
         #notifications {
             margin-left: 2vw;
             margin-right: 1vw;
-            margin-top: 1.9vh;
+            margin-top: 1.2vh;
+            font-size: 4vh;
         }
 
         .logo-menu-container {
@@ -186,10 +187,13 @@
         }
 
         .qr-btn {
-            height: 24px;
             text-decoration: none;
             color: #EEEEEE;
             margin-left: 2vw;
+            height: 100%;
+            margin-top: 1.2vh;
+            display: flex;
+            align-items: center;
         }
 
         .mdl-layout__content {
@@ -218,8 +222,8 @@
             color: #fff !important;
         }
 
-        div.material-icons {
-            margin-top: 0.9vh;
+        .qr-btn i.material-icons {
+            font-size: 4vh !important;
         }
 
         button.sidenav-btn {
@@ -292,9 +296,9 @@
                 </a>
                 {% endif %}
                 <a class="qr-btn" href="{% url 'brand:qr_code' %}">
-                    <div class="material-icons">
+                    <i class="material-icons">
                         qr_code
-                    </div>
+                    </i>
                 </a>
                 <!-- <a class="settings-btn" href="{% url 'accounts:settings' %}">
                     <div class="material-icons">
