--- a/brand/templates/brand/campaign.html
+++ b/brand/templates/brand/campaign.html
@@ -311,7 +311,7 @@
     }
 
     .current-campaign .top-grid .right-align {
-        text-align: right;
+        text-align: center;
         color: #e53935;
     }
 
