--- a/brand/templates/brand/edit_active_locations.html
+++ b/brand/templates/brand/edit_active_locations.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 <div class="container">
-    <div class="header">Select Active Locations</div>
+    <div class="header">SELECT ACTIVE LOCATIONS</div>
     <form method="POST">
         {% csrf_token %}
         {{ form }}
@@ -12,10 +12,15 @@
 </div>
 <script>
     $('form > label').html('');
+    document.querySelectorAll('#id_location li').forEach((item, index) => {
+        let text = item.children[0].innerText.replace(/^\s+|\s+$/g, '');
+        $(item.children[0]).contents().filter(function(){ return this.nodeType === 3; }).remove();
+        item.innerHTML += `<div>${text}</div>`;
+    });
 </script>
 <style>
     .container {
-        background-color: #EEEEEE;
+        background-color: #fff;
         width: 60vw;
         margin: auto;
         margin-top: 5vh;
@@ -25,8 +30,14 @@
 
     input[type="submit"] {
         width: 100%;
-        background-color: #161A1D !important;
-        color: #EEEEEE !important;
+        background-color: #0471ff !important;
+        color: #fff !important;
+        border-radius: 15px;
+        font-size: 2vh;
+        line-height: 2vh;
+        font-family: 'Montserrat', sans-serif !important;
+        height: 5vh;
+        margin-top: 1.2vh;
     }
 
     ul {
@@ -38,15 +49,36 @@
         padding: 2vh 0;
     }
 
-    li:not(:last-child) {
-        border-bottom: 0.5px solid #9e9e9e;
-    }
-
     .header {
-        text-align: center;
-        font-size: 3em;
+        font-size: 4vh;
         font-weight: 300;
         padding-top: 2vh;
+        color: #150e41;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: bold;
+    }
+
+    #id_location {
+        padding-left: 0;
+    }
+
+    #id_location li {
+        display: flex;
+        color: #515151;
+    }
+
+    #id_location li div {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    #id_location input {
+        height: 25px;
+        width: 25px;
+    }
+
+    #id_location label {
+        color: #515151;
+        margin-right: 1vw;
     }
 </style>
 {% endblock %}
